--- a/entwined-purple.html
+++ b/entwined-purple.html
@@ -27,7 +27,7 @@
 
 <a class="back" href="index.html">← Back to Store</a>
 
-<img src="images/entwined-purple.jpg" alt="Entwined Purple Candle">
+<img src="entwined-purple.jpg" alt="Entwined Purple Candle">
 
 <h1>Entwined Candle (Purple)</h1>
 <div class="price">₹499</div>
