--- a/entwined-red.html
+++ b/entwined-red.html
@@ -27,7 +27,7 @@
 
 <a class="back" href="index.html">← Back to Store</a>
 
-<img src="images/entwined-red.jpg" alt="Entwined Red Candle">
+<img src="entwined-red.jpg" alt="Entwined Red Candle">
 
 <h1>Entwined Candle (Red)</h1>
 <div class="price">₹499</div>
