--- a/eternal-rose-red.html
+++ b/eternal-rose-red.html
@@ -21,7 +21,7 @@
 
 <div class="container"><div class="card">
 
-<img src="images/rose-red.jpg">
+<img src="rose-red.jpg">
 
 <h1>Eternal Rose Candle (Red)</h1>
 <div class="price">₹399</div>
