--- a/sunflower-candle.html
+++ b/sunflower-candle.html
@@ -26,7 +26,7 @@
 
 <a class="back" href="index.html">← Back to Store</a>
 
-<img src="images/sunflower.jpg" alt="Sunflower Candle">
+<img src="sunflower.jpg" alt="Sunflower Candle">
 
 <h1>Sunflower Candle</h1>
 <div class="price">₹199</div>
